--- a/index.html
+++ b/index.html
@@ -6,14 +6,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="app.js">
     <title>JavaScript Questions</title>
+    <style>
+        input[type=text],
+        input[type=password] {
+            width: 100%;
+            padding: 15px;
+            margin: 5px 0 22px 0;
+            display: inline-block;
+            border: none;
+            background: #f1f1f1;
+        }
+    </style>
 </head>
 
 <body>
 
 
 
-    <script>  
-  
+
+
+
+
+    <script>
 
     </script>
 
